Add Dockerfile and maven project pom file